Bug 1054810: when block size is unconstrained and we aren't setting aDesiredSize.BSize to the computed block size, preserve the original value. r=jfkthame.